Issue Picker implement (ON GOING DEVELOPMENT)

--- a/src/main/resources/css/reporting.css
+++ b/src/main/resources/css/reporting.css
@@ -13,6 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+ .jira-multi-select>.icon.drop-menu{
+   margin-bottom: 5px;
+}
  .criteria-dropdown-calendar-icon{
     position: absolute;
     top: 19px;
@@ -38,6 +41,27 @@
     font-size: inherit;
     margin: 0;
     max-width: 250px;
+    vertical-align: baseline;
+    width: 100%;
+    background: #fff;
+    color: #333;
+    font-family: inherit;
+    font-size: 14px;
+ }
+ 
+  .criteria-dropdown-textarea{
+    width: 100%;
+    min-width: 200px;
+    height: 2.1428571428571em;
+    line-height: 1.4285714285714;
+    padding: 4px 5px;
+    border: 1px solid #ccc;
+    border-radius: 3.01px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: inherit;
+    margin: 0;
+    max-width:400px;
     vertical-align: baseline;
     width: 100%;
     background: #fff;
