--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -45,7 +45,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
             selectedTypes: ${selectedTypes},
             selectedPriorities: ${selectedPriorities},
             selectedResolutions: ${selectedResolutions},
-            selectedGroups: ${selectedGroups},
+            selectedGroups: [ #foreach( $tmp in $selectedGroups )#if($velocityCount> 1),#end "$tmp"  #end ],
             selectedUsers:  [ #foreach( $tmp in $selectedUsers )#if($velocityCount> 1),#end "$tmp"  #end ],
             selectedAssignes: [ #foreach( $tmp in $selectedAssignes )#if($velocityCount> 1),#end "$tmp" #end ],
             selectedReportes: [ #foreach( $tmp in $selectedReportes )#if($velocityCount> 1),#end "$tmp" #end ],
