--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -446,7 +446,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
                                          </div>
                                          <!-- User Dropdown End-->
                                          <!-- Group Dropdown  BUTTON-->
-                                         <a id="groupPickerButton" href="#groupPickerDropDown" aria-owns="groupPickerDropDown" aria-haspopup="true" class="criteria-selector aui-button aui-button-subtle drop-arrow aui-dropdown2-trigger"></a>
+                                         <a id="groupPickerButton" href="#groupPickerDropDown" aria-disabled="false" aria-owns="groupPickerDropDown" aria-haspopup="true" class="criteria-selector aui-button aui-button-subtle drop-arrow aui-dropdown2-trigger"></a>
                                          <!-- Group Dropdown -->
                                          <div id="groupPickerDropDown" class="aui-style-default aui-dropdown2">
                                            <div class="jttr-filter-field">
