--- a/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
+++ b/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
@@ -37,10 +37,10 @@
 	                                      <div class='field-group aui-field-issuetype'>
 	                                        <ul class="aui-list-section">
 	                                          <li class="aui-list-item">
-	                                            <a id="detials-all-export" class="aui-list-item-link" target="_blank" href="#" data-jttp-href="/rest/jttp-rest/1/download-report/downloadWorklogDetailsReport" onclick="everit.reporting.main.updateDetailsAllExportHref()">Export all</a>
+	                                            <a id="detials-all-export" class="aui-list-item-link" target="_blank" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadWorklogDetailsReport" onclick="everit.reporting.main.updateDetailsAllExportHref()">Export all</a>
 	                                          </li>
 	                                          <li class="aui-list-item">
-	                                            <a id="detials-custom-export" class="aui-list-item-link" target="_blank" href="#" data-jttp-href="/rest/jttp-rest/1/download-report/downloadWorklogDetailsReport" onclick="everit.reporting.main.updateDetailsCustomExportHref()">Export custom</a>
+	                                            <a id="detials-custom-export" class="aui-list-item-link" target="_blank" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadWorklogDetailsReport" onclick="everit.reporting.main.updateDetailsCustomExportHref()">Export custom</a>
 	                                          </li>
 	                                        </ul>
 	                                      </div>
