--- a/src/main/resources/templates/timetracker/table_report_list.vm
+++ b/src/main/resources/templates/timetracker/table_report_list.vm
@@ -61,7 +61,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 			                    	 		$worklog.startDate
 		                    	 	</td>
 		                    	 	<td class="table-issue" class="vertically-middle" style="white-space: nowrap; #if($worklog.isClosed) text-decoration: line-through; #end">
-		                    	 		<a href="/browse/$worklog.issue" class="issue-link" title="#if($worklog.issueParent != '') $i18n.getText('plugin.parent.issue') $worklog.issueParent &#13 $worklog.issueSummary #else $worklog.issueSummary #end">$worklog.issue</a>
+		                    	 		<a href="$contextPath/browse/$worklog.issue" class="issue-link" title="#if($worklog.issueParent != '') $i18n.getText('plugin.parent.issue') $worklog.issueParent &#13 $worklog.issueSummary #else $worklog.issueSummary #end">$worklog.issue</a>
 		                    	 	</td>
 		                    	 	<td style="vertical-align: middle; white-space: nowrap;">
 		                    	 		#if($worklog.isClosed)
