--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -56,7 +56,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
             selectedEpicLinks: ${filterCondition.issueEpicLinkIssueIds},
             selectedIssues: [ #foreach( $tmp in $filterCondition.issueKeys )#if($velocityCount> 1),#end "$tmp" #end ],
             selectedMore: [ #foreach( $tmp in $selectedMore )#if($velocityCount> 1),#end "$tmp" #end ],
-            
+            worklogDetailsColumns:  [ #foreach( $tmp in $selectedWorklogDetailsColumns )#if($velocityCount> 1),#end "$tmp" #end ],
           }
         );
       })(everit.reporting.main, AJS.$);
@@ -485,7 +485,8 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
                                                     <span id="date_trigger_to" class="aui-icon icon-date">Select a date</span>
                                                 </a>
                                         </div>
-                                        <input type="hidden" id="filterConditionJson" name="filterConditionJson" value=""/>
+                                        <input type="hidden" id="filterConditionJson" name="filterConditionJson" value="$filterConditionJson"/>
+                                        <input type="hidden" id="selectedWorklogDetailsColumns" name="selectedWorklogDetailsColumns" value="$selectedWorklogDetailsColumns"/>
                                         <button type="submit" class="aui-button aui-button-primary" onclick="everit.reporting.main.beforeSubmitCreateReport()">Create Report</button> <!-- Submit the search form -->
                                     </div>
                                 </div>
