--- a/src/main/resources/templates/reporting/reporting_result_summaries.vm
+++ b/src/main/resources/templates/reporting/reporting_result_summaries.vm
@@ -15,8 +15,7 @@
  *#
                 <div id="summaryModule" class="module summary-module toggle-wrap expanded">
                     <div id="summaryModuleHeading" class="mod-header">
-                        <span class="aui-icon aui-icon-small aui-iconfont-expanded"></span>
-                        <h2 class="toggle-title" onclick="everit.reporting.main.togglModContent('summary')">Quick Summary</h2>
+                        <h2 class="toggle-title" onclick="everit.reporting.main.toggleModContent('summary')">Quick Summary</h2>
                     </div>
                     <div class="mod-content">
                         <div class="summary-export-container action-button-container">
